--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
+<div class="jumbotron">
 <h1>Look, no hands!</h1>
-<p>sign up <%= link_to "here", "#" %> </p>
+<p>sign up <%= link_to "here", "#", class: "btn btn-primary btn-lg" %> </p>
+</div>
