--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 <h1>Look, no hands!</h1>
-<p>sign up <%= link_to "here", "#", class: "btn btn-primary btn-lg" %> </p>
+<p><%= link_to "log in", "#", class: "btn btn-default btn-lg" %> 
+<%= link_to "sign up", "#", class: "btn btn-primary btn-lg" %> </p>
 </div>
