--- a/app/assets/stylesheets/bootsrap.css.scss
+++ b/app/assets/stylesheets/bootsrap.css.scss
@@ -1,6 +1,18 @@
-$body-bg: #ecf0f1 ;
-$navbar-default-bg: #27ae60 ;
-$navbar-default-link-color : white;
-$brand-primary: #f39c12 ; 
-$jumbotron-bg: #bdc3c7 ; 
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+$body-bg:							#ecf0f1 ;
+$font-family-sans-serif:			'lato' "Helvetica Neue", Helvetica, Arial, sans-serif ;
+$navbar-height:						45px;
+$navbar-default-bg:					white ;
+$navbar-default-brand-color:		#c0392b;
+$navbar-default-brand-hover-color:	darken($navbar-default-brand-color, 10%) ; 
+$brand-primary:						#c0392b ; 
+$jumbotron-bg:						white ; 
 @import 'bootstrap' ;
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
