--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
+  <!--<div class="container-fluid"> -->
+    <div class="container" >
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -8,7 +9,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Dori</a>
+
+     <%= link_to "Dori", root_path , class:"navbar-brand" %>
     </div>
    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
@@ -17,5 +19,6 @@
         <li><%= link_to "About", about_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
+</div> <!-- / container -->
 </nav>
